<resources>
    <string name="app_name">Capstone-Yogain</string>
    <string name="caps_name">YOGAIN</string>
    <string name="onBoardDesc1">Yoga practice helps improve body and posture awareness.\nBy improving body posture, you can prevent and reduce spine and muscle problems.</string>
    <string name="onBoard1">on Board 1</string>
    <string name="skip">skip</string>
    <string name="onBoard2">on Board 2</string>
    <string name="onBoardDesc2">Yoga practice helps improve body and posture awareness.\nBy improving body posture, you can prevent and reduce spine and muscle problems.</string>
    <string name="onBoard3">on Board 3</string>
    <string name="onBoardDesc3">Step-by-Step Guide: The app provides step-by-step guidance for each yoga movement and pose, helping users understand and execute them properly.</string>
    <string name="title_onBoard3">Guidelines with AI</string>
    <string name="title_onBoard2">Relaxation and Stress Reduction</string>
    <string name="title_onBoard1">Posture Improvement</string>
    <string name="lets_healty">Let\'s Healthy with Us</string>
    <string name="lets_healthy">Let\'s Healthy with Us</string>
    <string name="welcome_login">Welcome to Yogain App</string>
    <string name="desc_welcome_login">"If you don’t have account please register early"</string>
    <string name="desc_welcome_register">"After registering please login to enter our main page "</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don’t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">====================  Or  ====================</string>
    <string name="google">Google</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="welcome_register">Welcome to Register Page</string>
    <string name="name">name</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="name_user">User</string>
    <string name="hello">Hello</string>
    <string name="good_morning">Good Morning</string>
    <string name="poses">Poses</string>
    <string name="see_all">see all</string>
    <string name="tree_poses">Tree Poses</string>
    <string name="five_mins">5 mins</string>
    <string name="graphics">Graphics</string>
    <string name="description">Description</string>
    <string name="check_your_camera">"Check your pose with camera:  "</string>
    <string name="camera">Camera</string>
    <string name="default_web_client_id">Default web</string>
    <string name="fields_cannot_empty">Field\'s cannot be empty</string>
    <string name="logo">logo</string>
    <string name="title">YOGAIN APP</string>
    <string name="password_more">password should be 8 or more</string>
    <string name="isNotValid">The email is not valid</string>
    <string name="recently_poses">Recently Poses</string>
    <string name="orLoginWith">Or Login With</string>
    <string name="empty_password">pasword is empty</string>
    <string name="error">error</string>
    <string name="empty_email">email is empty</string>
    <string name="empty_name">name is empty</string>
    <string name="email_have_been_register">email have been registered</string>
    <string name="login_success">login success</string>
    <string name="register_success">Success Create Account</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="calendar">calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="forget_password">forget password?</string>
    <string name="Logout">Logout</string>
    <string name="failed_take_picture">Failed take a picture</string>
    <string name="bad_request">bad_request</string>
    <string name="plan">plan</string>
    <string name="floating_action_button">floating action button</string>
    <string name="plan_overview">Plan Overview:</string>
    <string name="time">7:00 Am</string>
    <string name="date">31 dec</string>
    <string name="create_plan">Create plan</string>
    <string name="add_tittle">Add tittle</string>
    <string name="add_short_tittle">Add short tittle</string>
    <string name="add_description">Add description</string>
    <string name="type_something">Type something...</string>
    <string name="save_plan">Save Plan</string>
    <string name="time_title">time</string>
    <string name="date_title">date</string>
    <string name="are_you_sure">Are you sure!</string>
    <string name="are_you_delete">You really want to delete this task?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="delete">delete</string>
    <string name="add_your_first_task">Add your first Task</string>
    <string name="task_overview">Task overview :</string>
    <string name="empty_text">empty plan</string>
    <string name="please_enter_email_password">Please enter both email and password</string>
    <string name="signInCredientialSuccess">signInWithCredential:success</string>
    <string name="signInCredientialFailure">signInWithCredential:failure</string>
    <string name="firebaseAuthWithGoogle">firebaseAuthWithGoogle:</string>
    <string name="firebaseAuthWithGoogleFailed">Failed Auth With Google</string>
    <string name="rotation">rotation</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="forget_title">Forget</string>
    <string name="password_title">Password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new_password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_succesfull">Change Password Successfully</string>
    <string name="new_password_cannot_empty">New password cannot be empty</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="tfe_pe_tv_pose_classification">Pose Classification</string>
    <string name="tfe_pe_tv_tracking">Tracker: </string>
    <string name="tfe_pe_gpu_error">Movenet MultiPose does not support GPU. Fallback to CPU.</string>
    <string name="tfe_pe_request_permission">request permission</string>
    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
        <item>Movenet Thunder</item>
        <item>Movenet MultiPose</item>
        <item>Posenet</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="tfe_pe_tracker_array">
        <item>Off</item>
        <item>BoundingBox</item>
        <item>Keypoint</item>
    </string-array>
</resources>