<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.plan.AddTaskFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/create_plan"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/add_tittle"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tittleTextField"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:hint="@string/add_short_tittle"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:counterMaxLength="20"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/add_tittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tittleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_regular"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/add_description"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tittleTextField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desTextField"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:hint="@string/type_something"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/add_des">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plusjakartasans_regular"
            android:inputType="text|textMultiLine"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/date_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/desTextField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTextField"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:hint="@string/date"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@+id/timeTextField"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:startIconDrawable="@drawable/ic_calendar"
        app:startIconTint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="@font/plusjakartasans_regular"
            android:inputType="datetime|date"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/time_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/timeTextField"
        app:layout_constraintTop_toBottomOf="@+id/desTextField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeTextField"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:elevation="10dp"
        android:hint="@string/time"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/dateTextField"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:startIconDrawable="@drawable/ic_time"
        app:startIconTint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="@font/plusjakartasans_regular"
            android:inputType="datetime|date"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="@dimen/dimen_85dp"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/save_plan"
        android:textSize="@dimen/dimen_16sp"
        app:backgroundTint="@color/md_theme_light_primary"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />
</androidx.constraintlayout.widget.ConstraintLayout>
