<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_marginBottom="10dp"
        app:strokeWidth="1dp"
        android:elevation="6dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:fontFamily="@font/plusjakartasans_medium"
                android:textSize="18sp"
                android:layout_toEndOf="@id/checkbox"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:fontFamily="@font/plusjakartasans_medium"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="2dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/plusjakartasans_medium "
                android:text="@string/date"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_toStartOf="@id/date"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@id/checkbox"
                android:fontFamily="@font/plusjakartasans_medium"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>