<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ForgetPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/l_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_56dp"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                style="@style/headlineMedium"
                android:text="@string/forget_title" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/headlineMedium"
                android:textStyle="bold"
                android:textColor="@color/md_theme_light_primary"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:text="@string/password_title"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l_forget_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.example.capstone_yogain.presentation.custom.PasswordEditText
                android:id="@+id/old_passwordEditText"
                style="@style/bodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_passwordEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_passwordEditTextLayout"
            app:startIconDrawable="@drawable/ic_lock">

            <com.example.capstone_yogain.presentation.custom.PasswordEditText
                android:id="@+id/new_passwordEditText"
                style="@style/bodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_change"
            style="@style/bodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_passwordEditTextLayout"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>