<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.plan.CalendarFragment">

    <TextView
        android:id="@+id/tv_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/plan_overview"
        android:textSize="@dimen/dimen_16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_56dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans_medium"
        android:text="@string/empty_text"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="@dimen/dimen_16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_plan"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/dimen_16dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:visibility="gone"
        tools:listitem="@layout/item_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_plan"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_light_primary"
        android:tint="@color/white"
        android:src="@drawable/baseline_add_24"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no"
        android:contentDescription="@string/floating_action_button" />

</androidx.constraintlayout.widget.ConstraintLayout>