<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_top_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius_bottom_left="@dimen/dimen_16dp"
            app:riv_corner_radius_bottom_right="@dimen/dimen_16dp" />

        <LinearLayout
            android:id="@+id/l_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_48dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/iv_top_photo"
            app:layout_constraintBottom_toBottomOf="@id/iv_top_photo"
            app:layout_constraintTop_toTopOf="@id/iv_top_photo">

            <TextView
                android:id="@+id/tv_hello"
                style="@style/headlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/iv_top_photo"
                app:layout_constraintTop_toTopOf="@id/iv_top_photo" />

            <TextView
                android:id="@+id/tv_user"
                style="@style/headlineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:text="@string/name_user"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_poses"
            style="@style/titleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_24dp"
            android:text="@string/poses"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_top_photo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_grid1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_poses"
            android:layout_margin="@dimen/dimen_16dp"
            app:spanCount="2"
            tools:listitem="@layout/item_poses"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
